--- a/push.html
+++ b/push.html
@@ -6,6 +6,9 @@
     <title>GitPushProject</title>
 </head>
 <body>
-    
+    <div>
+        <h3>1st Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque natus quam, amet officia, quidem illum delectus, dolore asperiores sunt quia culpa. Numquam similique illo, itaque quos deserunt ullam cum fugiat.</p>
+    </div>
 </body>
 </html>
