push incermantal code

--- a/push.html
+++ b/push.html
@@ -10,5 +10,13 @@
         <h3>1st Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque natus quam, amet officia, quidem illum delectus, dolore asperiores sunt quia culpa. Numquam similique illo, itaque quos deserunt ullam cum fugiat.</p>
     </div>
+    <div>
+        <h3>Push Incermental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m "meaning full commend"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
